--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = kirigami-gallery
 url = https://download.kde.org/stable/release-service/20.04.2/src/kirigami-gallery-20.04.2.tar.xz
 archives = 
-giturl = https://anongit.kde.org/kirigami-gallery.git
+giturl = https://invent.kde.org/sdk/kirigami-gallery.git
 domain = 
 alias = 
 
